# pywifi-controls

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  release_notes.rst
.github/workflows/: python-publish.yml
doc_gen/: conf.py
docs/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
pywifi/: __init__.py  control_connection.py  control_peripheral.py  model.py
