[project]
name = "pywifi-controls"
dynamic = ["version"]
description = "Python module to modify screen brightness on Linux, Windows and macOS"
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Terminals :: Terminal Emulators/X Terminals"
]
keywords = ["pywifi", "display-settings", "brightness-control"]
requires-python = ">=3"
dependencies = [
    "Jinja2==3.1.2", "pyobjc; platform_system=='Darwin'"
]

[tool.setuptools]
packages = ["pywifi"]

[tool.setuptools.dynamic]
version = {attr = "pywifi.version"}

[build-system]
requires      = ["setuptools", "wheel", "Jinja2==3.1.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/thevickypedia/pywifi-controls"
Docs = "https://thevickypedia.github.io/pywifi-controls/"
Source = "https://github.com/thevickypedia/pywifi-controls"
"Bug Tracker" = "https://github.com/thevickypedia/pywifi-controls/issues"
"Release Notes" = "https://github.com/thevickypedia/pywifi-controls/blob/main/release_notes.rst"
